refactor: Gestion des méthodes et capital dans Manager.tsx
Fonctionnalités implémentées :

Méthodes disponibles et sélectionnées :
Case à cocher pour sélectionner une méthode.
Colonne droite actualisée en fonction des sélections.
Gestion des icônes (état configuré ou non).

Mise à jour du capital :
Champ pour saisir un nouveau capital.
Bouton fonctionnel pour valider et mettre à jour les valeurs.

Gestion de la disposition :
Capital et sécurité en haut.
Méthodes à gauche et droite.
Commandes globales en bas (démarrer, arrêter, réinitialiser).
Footer avec statut et icône d’aide.

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "electron-updater": "^6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
@@ -242,11 +243,20 @@
   "collective": {
     "url": "https://opencollective.com/electron-react-boilerplate-594"
   },
-  "devEngines": {
+  "engines": {
     "node": ">=14.x",
     "npm": ">=7.x"
   },
   "electronmon": {
+    "mainFile": "src/main/main.ts",
+    "watch": [
+      "src/main/**/*",
+      "src/renderer/**/*"
+    ],
+    "ignore": [
+      "node_modules",
+      ".erb/dll/main.bundle.dev.js"
+    ],
     "patterns": [
       "!**/**",
       "src/main/**",
